Closed Bug 368354 Opened 18 years ago Closed 18 years ago

Only offer to restore users' sessions after crash if there's a session to restore

Categories

(Camino Graveyard :: General, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.5

People

(Reporter: froodian, Assigned: stuart.morgan+bugzilla)

Details

(Keywords: fixed1.8.1.3)

Attachments

(1 file)

After crashing, we now offer the user the choice to restore the previous session (bug 358689).  However, if there isn't a session to restore, we shouldn't do so. STR:

1. launch the browser
2. open http://google.com
3. Force quit immediately
4. Relaunch

What happens: we throw the dialog, but there's nothing to restore
What should happen: don't throw if we don't have anything

[3:55pm] <smorgan> File a bug and assign it to me; I need to make API to check to see if there is state that can be restored
[3:55pm] <smorgan> And make the startup code check it before throwing the dialog
Attached patch fixSplinter Review
Attachment #253337 - Flags: review?(stridey)
Comment on attachment 253337 [details] [diff] [review]
fix

r=me.
Attachment #253337 - Flags: superreview?(mikepinkerton)
Attachment #253337 - Flags: review?(stridey)
Attachment #253337 - Flags: review+
Comment on attachment 253337 [details] [diff] [review]
fix

can we actually be in a state where there is a saved state file but the previous session terminated normally? seems like the logic there is a little weird.
Yes, it happens on every quit if camino.remember_window_state is set.
Comment on attachment 253337 [details] [diff] [review]
fix

sr=pink
Attachment #253337 - Flags: superreview?(mikepinkerton) → superreview+
I hope this fixes some of the cases where I'm seeing this randomly on new/rebuilt builds ;)
Whiteboard: [needs checkin]
Checked in on trunk and MOZILLA_1_8_BRANCH.
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1.3
Resolution: --- → FIXED
Whiteboard: [needs checkin]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: