Camino only - Bug 368354: Don't offer to restore session if there is no saved session. r=stridey sr=pink